<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MaterialTheme"
    app:cardCornerRadius="6dp"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/connect_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:onClick="onConnectClick"
                android:text="@string/str_connect"
                android:textColor="@android:color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="5dp"
                android:elevation="16dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etTopic1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_enter_topic"
                            android:padding="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPayLoad"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etTopic1"
                        android:layout_margin="5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_enter_payload"
                            android:padding="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/pqs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etPayLoad"
                        android:layout_margin="5dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/userPassword"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btnPublish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pqs"
                        android:layout_margin="5dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/str_send"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/llPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="5dp"
                android:elevation="16dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etTopic"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="10dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_enter_topic"
                            android:inputType="text"
                            android:padding="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--                <com.google.android.material.textfield.TextInputLayout-->
                    <!--                    android:id="@+id/etPayLoad"-->
                    <!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_below="@+id/etTopic"-->
                    <!--                    android:layout_margin="5dp"-->
                    <!--                    android:layout_marginBottom="10dp">-->

                    <!--                    <EditText-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:hint="@string/hint_enter_payload"-->
                    <!--                        android:padding="16dp" />-->

                    <!--                </com.google.android.material.textfield.TextInputLayout>-->

                    <Button
                        android:id="@+id/btnSubscribe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etTopic"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorPrimary"
                        android:onClick="onSubscribeClick"
                        android:text="@string/str_sub"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/topicRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/subscriptionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/subscription_messages"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/subscriptionHeader" />
            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>